# MIDI-over-LAN

./: README.md  TODO.md  pyproject.toml
gui/: MainWidget.py  MainWidget.ui  main.py  midi_receiver.py  midi_sender.py  worker_messages.py
midi_over_lan/: AUTHORS  __init__.py  client.py  logging_setup.py  midi_over_lan.py  midi_over_lan_wireshark_dissector.lua  midi_receiver.py  midi_sender.py  minimal_example_client.py  minimal_example_server.py  protocol.py  server.py  test.py  worker_messages.py
midi_over_lan/examples/: minimal_example_client.py  minimal_example_server.py
midi_over_lan/gui/qt/: MainWidget.py  debug_messages_dialog.py  debug_messages_dialog.ui  line_chart.py  logging_setup.py  main.py  main_widget.ui  main_window.py  main_window.ui  rotated_label.py  routing_matrix.py  settings_dialog.py  settings_dialog.ui  ui_debug_messages_dialog.py  ui_debug_messages_dialog.ui  ui_main_window.py  ui_settings_dialog.py  version.py
