# On the command line you might want to enter:
#
#   poetry config virtualenvs.in-project true
#   poetry env use python
#   poetry sync
#
# In order to use a specific Python version you might want
# to try something like:
#
#   poetry env use C:\Users\<user>\AppData\Local\Programs\Python\Python312\python.exe


[project]
name = "midi-over-lan"
version = "1.0.0"
description = "MIDI-over-LAN library (protocol, sample programs, and GUI application)"
authors = [
    {name = "Christoph Hänisch",email = "christoph.haenisch@rwth-aachen.de"}
]
license = {text = "LGPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.9, <3.13"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "icecream (>=2.1.4,<3.0.0)",
    "mido[ports-rtmidi] (>=1.3.3,<2.0.0)",
    "pyside6 (>=6.8.2.1,<7.0.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
